Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35937

InnoDB: Failing assertion: sym_node->table != NULL in pars_retrieve_table_def

    XMLWordPrintable

Details

    Description

      --source include/have_innodb.inc
       
      CREATE TABLE t (a TEXT ,FULLTEXT (a)) ENGINE=INNODB;
      ALTER TABLE t DISCARD TABLESPACE;
      SET GLOBAL innodb_ft_aux_table='test/t';
      SELECT * FROM information_schema.innodb_ft_config;
      

      This crash is similar to MDEV-25536, but here the crash occurs when reading records from innodb_ft_config.

      Leads to:

      CS 10.5.28 1f306d395d00df158702d35b3338ccfe8663744e (Optimized)

      InnoDB: Failing assertion: sym_node->table != NULL
      

      CS 10.5.28 1f306d395d00df158702d35b3338ccfe8663744e (Optimized)

      Core was generated by `/test/MD220125-mariadb-10.5.28-linux-x86_64-opt/bin/mariadbd --no-defaults --ma'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      [Current thread is 1 (Thread 0x14bcd122a700 (LWP 1523244))]
      (gdb) bt
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #1  0x000014bcf895d859 in __GI_abort () at abort.c:79
      #2  0x0000557ce42584a0 in ut_dbg_assertion_failed (expr=expr@entry=0x557ce4ebf5b4 "sym_node->table != NULL", file=file@entry=0x557ce4ebef60 "/test/10.5_opt/storage/innobase/pars/pars0pars.cc", line=line@entry=771) at /test/10.5_opt/storage/innobase/ut/ut0dbg.cc:60
      #3  0x0000557ce423ef64 in pars_retrieve_table_def (sym_node=0x14bc68036960) at /test/10.5_opt/storage/innobase/pars/pars0pars.cc:771
      #4  pars_retrieve_table_def (sym_node=0x14bc68036960) at /test/10.5_opt/storage/innobase/pars/pars0pars.cc:753
      #5  0x0000557ce491bef0 in pars_retrieve_table_list_defs (sym_node=0x14bc68036960) at /test/10.5_opt/storage/innobase/pars/pars0pars.cc:792
      #6  pars_select_statement (select_node=0x14bc68036878, table_list=0x14bc68036960, search_cond=0x14bc68036c18, for_update=0x0, lock_shared=0x0, order_by=0x0) at /test/10.5_opt/storage/innobase/pars/pars0pars.cc:923
      #7  0x0000557ce4a9767e in yyparse () at pars0grm.y:308
      #8  0x0000557ce491fb6f in pars_sql (info=info@entry=0x14bc6801b438, str=str@entry=0x14bc6801e980 "PROCEDURE P() IS\nDECLARE FUNCTION my_func;\nDECLARE CURSOR c IS SELECT value FROM $table_name WHERE key = :name;\nBEGIN\nOPEN c;\nWHILE 1 = 1 LOOP\n  FETCH c INTO my_func();\n  IF c % NOTFOUND THEN\n    EXIT"...) at /test/10.5_opt/storage/innobase/pars/pars0pars.cc:1998
      #9  0x0000557ce4a82328 in fts_parse_sql (fts_table=fts_table@entry=0x14bcd1228340, info=info@entry=0x14bc6801b438, sql=sql@entry=0x557ce4edbf58 "DECLARE FUNCTION my_func;\nDECLARE CURSOR c IS SELECT value FROM $table_name WHERE key = :name;\nBEGIN\nOPEN c;\nWHILE 1 = 1 LOOP\n  FETCH c INTO my_func();\n  IF c % NOTFOUND THEN\n    EXIT;\n  END IF;\nEND L"...) at /test/10.5_opt/storage/innobase/fts/fts0sql.cc:161
      #10 0x0000557ce4a74c80 in fts_config_get_value (trx=trx@entry=0x14bcf8175118, fts_table=fts_table@entry=0x14bcd1228340, name=name@entry=0x557ce4eb7e35 "optimize_checkpoint_limit", value=value@entry=0x14bcd1228320) at /test/10.5_opt/storage/innobase/fts/fts0config.cc:102
      #11 0x0000557ce48bda99 in i_s_fts_config_fill (thd=0x14bc68000c58, tables=<optimized out>) at /test/10.5_opt/storage/innobase/handler/i_s.cc:3386
      #12 0x0000557ce441c8fe in get_schema_tables_result (join=join@entry=0x14bc68011df0, executed_place=executed_place@entry=PROCESSED_BY_JOIN_EXEC) at /test/10.5_opt/sql/sql_show.cc:9011
      #13 0x0000557ce43ffdd7 in JOIN::exec_inner (this=0x14bc68011df0) at /test/10.5_opt/sql/sql_select.cc:4620
      #14 0x0000557ce4400508 in JOIN::exec (this=this@entry=0x14bc68011df0) at /test/10.5_opt/sql/sql_select.cc:4444
      #15 0x0000557ce43fe5aa in mysql_select (thd=0x14bc68000c58, tables=0x14bc68010c10, fields=@0x14bc680106c8: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x14bc68010b70, last = 0x14bc680127f0, elements = 2}, <No data fields>}, conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=<optimized out>, result=0x14bc68011dc8, unit=0x14bc68004a50, select_lex=0x14bc68010560) at /test/10.5_opt/sql/sql_select.cc:4921
      #16 0x0000557ce43fefa7 in handle_select (thd=thd@entry=0x14bc68000c58, lex=lex@entry=0x14bc68004988, result=result@entry=0x14bc68011dc8, setup_tables_done_option=setup_tables_done_option@entry=0) at /test/10.5_opt/sql/sql_select.cc:449
      #17 0x0000557ce438caae in execute_sqlcom_select (thd=0x14bc68000c58, all_tables=0x14bc68010c10) at /test/10.5_opt/sql/sql_parse.cc:6451
      #18 0x0000557ce439ad8a in mysql_execute_command (thd=0x14bc68000c58) at /test/10.5_opt/sql/sql_parse.cc:4043
      #19 0x0000557ce4386a63 in mysql_parse (thd=0x14bc68000c58, rawbuf=<optimized out>, length=<optimized out>, parser_state=<optimized out>, is_com_multi=<optimized out>, is_next_command=<optimized out>) at /test/10.5_opt/sql/sql_parse.cc:8251
      #20 0x0000557ce43941ed in dispatch_command (command=COM_QUERY, thd=0x14bc68000c58, packet=<optimized out>, packet_length=<optimized out>, is_com_multi=<optimized out>, is_next_command=<optimized out>) at /test/10.5_opt/sql/sql_class.h:1335
      #21 0x0000557ce439604e in do_command (thd=thd@entry=0x14bc68000c58) at /test/10.5_opt/sql/sql_parse.cc:1375
      #22 0x0000557ce449b4dd in do_handle_one_connection (connect=<optimized out>, connect@entry=0x557ce65f1218, put_in_cache=put_in_cache@entry=true) at /test/10.5_opt/sql/sql_connect.cc:1386
      #23 0x0000557ce449b7cd in handle_one_connection (arg=0x557ce65f1218) at /test/10.5_opt/sql/sql_connect.cc:1298
      #24 0x000014bcf8e6e609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #25 0x000014bcf8a5a133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.5.28 (dbg), 10.5.28 (opt)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.6.21 (dbg), 10.6.21 (opt), 10.11.11 (dbg), 10.11.11 (opt), 11.4.5 (dbg), 11.4.5 (opt), 11.7.1 (dbg), 11.7.1 (opt), 11.7.2 (dbg), 11.7.2 (opt), 11.8.0 (dbg), 11.8.0 (opt)

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              ramesh Ramesh Sivaraman
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 7h
                  7h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.