MDEV-35937  InnoDB: Failing assertion: sym_node->table != NULL in pars_retrieve_table_def

- InnoDB tries to fetch the metadata about fulltext index for
discarded tablespace and fails for discarded tablespace.
In i_s_fts_config_fill(), i_s_fts_index_cache_fill() and
i_s_fts_index_table_fill(), InnoDB needs to check whether
the tablespace is discarded or accessable before accessing the
fulltext auxiliary table. This issue doesn't exist in
10.6+ version due to MDEV-19445(commit 0aa2bc7a94d96397e2e061dacb8ed04a32c13fa0)